{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 75,
  "lineage": "fc3566f1-4cc3-49c4-dd62-f0596afe4276",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-ffb2d8d9779d1f50b",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-ffb2d8d9779d1f50b",
            "association_id": "eipassoc-0bd33c4c06bdb0129",
            "domain": "vpc",
            "id": "eipalloc-ffb2d8d9779d1f50b",
            "instance": "i-a0d4e8b7d28f9004a",
            "network_interface": "eni-6f84de6e456be61c5",
            "private_dns": "ip-10-0-0-177.ec2.internal",
            "private_ip": "10.0.0.177",
            "public_dns": "ec2-127-44-205-45.compute-1.amazonaws.com",
            "public_ip": "127.44.205.45",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-efbb28121a3cc7d79",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-efbb28121a3cc7d79",
            "association_id": "eipassoc-7662059c8c193943d",
            "domain": "vpc",
            "id": "eipalloc-efbb28121a3cc7d79",
            "instance": "i-b85070728e8b8a7c4",
            "network_interface": "eni-38154ea109159d2d8",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-127-246-240-100.compute-1.amazonaws.com",
            "public_ip": "127.246.240.100",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-9c3eba16889989027",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-9c3eba16889989027",
            "domain": "vpc",
            "id": "eipalloc-9c3eba16889989027",
            "public_dns": "ec2-127-125-106-249.compute-1.amazonaws.com",
            "public_ip": "127.125.106.249",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-a558984ee2fbc3825",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-a558984ee2fbc3825",
            "domain": "vpc",
            "id": "eipalloc-a558984ee2fbc3825",
            "public_dns": "ec2-127-232-101-138.compute-1.amazonaws.com",
            "public_ip": "127.232.101.138",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000002",
            "arn": "arn:aws:ec2:us-east-1::instance/i-2a5aa2907f1f4ac87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-2a5aa2907f1f4ac87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-f79e92a2310fe7b59"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-f79e92a2310fe7b59",
            "private_dns": "ip-10-0-2-32.ec2.internal",
            "private_ip": "10.0.2.32",
            "public_dns": "ec2-172-21-0-5.localhost.localstack.cloud",
            "public_ip": "172.21.0.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-cbbd9e929c6e37b8c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bf984cb6a065df734",
            "tags": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000002",
            "arn": "arn:aws:ec2:us-east-1::instance/i-f56e81e6a74cead54",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-f56e81e6a74cead54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-54378ab9527aa530e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-54378ab9527aa530e",
            "private_dns": "ip-10-0-3-120.ec2.internal",
            "private_ip": "10.0.3.120",
            "public_dns": "ec2-172-21-0-6.localhost.localstack.cloud",
            "public_ip": "172.21.0.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-750542e647fd96472",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7a3ae93819c372f3e",
            "tags": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-backend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000001",
            "arn": "arn:aws:ec2:us-east-1::instance/i-a0d4e8b7d28f9004a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-a0d4e8b7d28f9004a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-6f84de6e456be61c5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-6f84de6e456be61c5",
            "private_dns": "ip-10-0-0-177.ec2.internal",
            "private_ip": "10.0.0.177",
            "public_dns": "ec2-172-21-0-4.localhost.localstack.cloud",
            "public_ip": "172.21.0.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-9280aa9b142805253",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c463a4238ee87b886",
            "tags": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000001",
            "arn": "arn:aws:ec2:us-east-1::instance/i-b85070728e8b8a7c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-b85070728e8b8a7c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_vm_manager",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-38154ea109159d2d8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-38154ea109159d2d8",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-172-21-0-3.localhost.localstack.cloud",
            "public_ip": "172.21.0.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-dcc8387f6548e8445",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6edb7cd3ada4849ea",
            "tags": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-frontend-vm",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-a0facd4731eb82ec9",
            "id": "igw-a0facd4731eb82ec9",
            "owner_id": "000000000000",
            "tags": {
              "Name": "fleet-portal-dev-internet-gateway",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-internet-gateway",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-access-logs-20260328043617765600000002",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-backend/ca7f89c86d519065",
            "arn_suffix": "app/fleet-portal-dev-backend/ca7f89c86d519065",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fleet-portal-dev-backend.elb.localhost.localstack.cloud",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-backend/ca7f89c86d519065",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fleet-portal-dev-backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-fb256b846597fe443"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-7a3ae93819c372f3e"
              },
              {
                "subnet_id": "subnet-bf984cb6a065df734"
              }
            ],
            "subnets": [
              "subnet-7a3ae93819c372f3e",
              "subnet-bf984cb6a065df734"
            ],
            "tags": {
              "Name": "fleet-portal-dev-backend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-backend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-f8d433cb7141f39e3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7EXAMPLE"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_s3_bucket_policy.alb_logs",
            "aws_security_group.backend_lb",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.current",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-access-logs-20260328043617765600000002",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-frontend/bc81d88faa764244",
            "arn_suffix": "app/fleet-portal-dev-frontend/bc81d88faa764244",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fleet-portal-dev-frontend.elb.localhost.localstack.cloud",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-frontend/bc81d88faa764244",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fleet-portal-dev-frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-2cbe7e8f2cdac947a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-6edb7cd3ada4849ea"
              },
              {
                "subnet_id": "subnet-c463a4238ee87b886"
              }
            ],
            "subnets": [
              "subnet-6edb7cd3ada4849ea",
              "subnet-c463a4238ee87b886"
            ],
            "tags": {
              "Name": "fleet-portal-dev-frontend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-frontend-lb",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-f8d433cb7141f39e3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7EXAMPLE"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_s3_bucket_policy.alb_logs",
            "aws_security_group.frontend_lb",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.current",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-backend/ca7f89c86d519065/bf6bdc41110493a6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-backend/ca7f89c86d519065/bf6bdc41110493a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-backend/ca7f89c86d519065",
            "mutual_authentication": [],
            "port": 4566,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.backend",
            "aws_lb_target_group.backend_http",
            "aws_s3_bucket.alb_logs",
            "aws_s3_bucket_policy.alb_logs",
            "aws_security_group.backend_lb",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.current",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-frontend/bc81d88faa764244/be64c8ca0931251f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-frontend/bc81d88faa764244/be64c8ca0931251f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-frontend/bc81d88faa764244",
            "mutual_authentication": [],
            "port": 4566,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_s3_bucket.alb_logs",
            "aws_s3_bucket_policy.alb_logs",
            "aws_security_group.frontend_lb",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.current",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-frontend/bc81d88faa764244/9a632ecd105b11b5",
            "certificate_arn": "arn:aws:acm:us-east-1:000000000000:certificate/e9190b62-97a5-431e-919a-5b4354e878f6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/fleet-portal-dev-frontend/bc81d88faa764244/9a632ecd105b11b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/fleet-portal-dev-frontend/bc81d88faa764244",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.main",
            "aws_lb.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_s3_bucket.alb_logs",
            "aws_s3_bucket_policy.alb_logs",
            "aws_security_group.frontend_lb",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.current",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7",
            "arn_suffix": "targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fleet-portal-dev-backend-http",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f",
            "arn_suffix": "targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fleet-portal-dev-frontend-http",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7-20260328043633578400000014",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7",
            "target_id": "i-2a5aa2907f1f4ac87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.backend",
            "aws_lb_target_group.backend_http",
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7-20260328043633577900000013",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-backend-http/10f02d0514d55dd7",
            "target_id": "i-f56e81e6a74cead54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.backend",
            "aws_lb_target_group.backend_http",
            "aws_network_interface.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_http_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "all",
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f-20260328043632600100000012",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f",
            "target_id": "127.44.205.45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.frontend",
            "aws_instance.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_http_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "all",
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f-20260328043632600000000011",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/fleet-portal-dev-frontend-http/e35196cedaadc51f",
            "target_id": "127.246.240.100"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.frontend",
            "aws_instance.frontend",
            "aws_lb_target_group.frontend_http",
            "aws_network_interface.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_ami.frontend",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.main",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-9c3eba16889989027",
            "association_id": "eipassoc-968d1cf857f39f2d8",
            "connectivity_type": "public",
            "id": "nat-7a412d781fbf1c665",
            "network_interface_id": "eni-772ce79dfd1628d20",
            "private_ip": "10.99.118.13",
            "public_ip": "127.125.106.249",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-bf984cb6a065df734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-a558984ee2fbc3825",
            "association_id": "eipassoc-348c31e0b0359c4e2",
            "connectivity_type": "public",
            "id": "nat-ed79d4c62bd620afa",
            "network_interface_id": "eni-326144c2dde20e090",
            "private_ip": "10.143.163.253",
            "public_ip": "127.232.101.138",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-7a3ae93819c372f3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-f79e92a2310fe7b59",
            "id": "eni-f79e92a2310fe7b59",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:6702x:19602x:11902x",
            "owner_id": "000000000000",
            "private_ip": "10.0.2.32",
            "private_ip_list": [
              "10.0.2.32"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.32"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-a31226dbde29d2e48"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bf984cb6a065df734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-54378ab9527aa530e",
            "id": "eni-54378ab9527aa530e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:7402x:17202x:22902x",
            "owner_id": "000000000000",
            "private_ip": "10.0.3.120",
            "private_ip_list": [
              "10.0.3.120"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.120"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-a31226dbde29d2e48"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7a3ae93819c372f3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-6f84de6e456be61c5",
            "id": "eni-6f84de6e456be61c5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:22002x:5502x:1602x",
            "owner_id": "000000000000",
            "private_ip": "10.0.0.177",
            "private_ip_list": [
              "10.0.0.177"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.177"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-a31226dbde29d2e48"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c463a4238ee87b886"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-interface/eni-38154ea109159d2d8",
            "id": "eni-38154ea109159d2d8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:00:00:5302x:15002x:3302x",
            "owner_id": "000000000000",
            "private_ip": "10.0.1.70",
            "private_ip_list": [
              "10.0.1.70"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.70"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-a31226dbde29d2e48"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6edb7cd3ada4849ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-92a7475a5fc97430f",
            "id": "rtb-92a7475a5fc97430f",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-7a412d781fbf1c665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-65f075575760bafe8",
            "id": "rtb-65f075575760bafe8",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-ed79d4c62bd620afa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-669e5af4a6f5bbf04",
            "id": "rtb-669e5af4a6f5bbf04",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-a0facd4731eb82ec9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-d4b99189a2fbad597",
            "route_table_id": "rtb-92a7475a5fc97430f",
            "subnet_id": "subnet-bf984cb6a065df734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083e65d93a577e314",
            "route_table_id": "rtb-65f075575760bafe8",
            "subnet_id": "subnet-7a3ae93819c372f3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-a89fcf4fc4923682d",
            "route_table_id": "rtb-669e5af4a6f5bbf04",
            "subnet_id": "subnet-c463a4238ee87b886"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04756d3250a4f3c7d",
            "route_table_id": "rtb-669e5af4a6f5bbf04",
            "subnet_id": "subnet-6edb7cd3ada4849ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-1eb90032cdbbcc062",
            "description": "Security group for the backend EC2 instances",
            "egress": [],
            "id": "sg-1eb90032cdbbcc062",
            "ingress": [],
            "name": "fleet-portal-dev-backend-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-fb256b846597fe443",
            "description": "Security group for the load balancer",
            "egress": [],
            "id": "sg-fb256b846597fe443",
            "ingress": [],
            "name": "fleet-portal-dev-backend-lb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-9243cb0d2786b9924",
            "description": "Security group for the frontend EC2 instances",
            "egress": [],
            "id": "sg-9243cb0d2786b9924",
            "ingress": [],
            "name": "fleet-portal-dev-frontend-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-2cbe7e8f2cdac947a",
            "description": "Security group for the load balancer",
            "egress": [],
            "id": "sg-2cbe7e8f2cdac947a",
            "ingress": [],
            "name": "fleet-portal-dev-frontend-lb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-577009621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-1eb90032cdbbcc062",
            "security_group_rule_id": "sgr-d79a139de2f120614",
            "self": false,
            "source_security_group_id": "sg-fb256b846597fe443",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.backend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_lb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-3643621417",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-fb256b846597fe443",
            "security_group_rule_id": "sgr-8e212062c364a3953",
            "self": false,
            "source_security_group_id": "sg-1eb90032cdbbcc062",
            "timeouts": null,
            "to_port": 5000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.backend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_lb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1471021867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-fb256b846597fe443",
            "security_group_rule_id": "sgr-418c995521b21c723",
            "self": false,
            "source_security_group_id": "sg-9243cb0d2786b9924",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_lb",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-249549188",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-1eb90032cdbbcc062",
            "security_group_rule_id": "sgr-7047befa322d70f73",
            "self": false,
            "source_security_group_id": "sg-9243cb0d2786b9924",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1067792856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-9243cb0d2786b9924",
            "security_group_rule_id": "sgr-e4a49aed27c33a3c1",
            "self": false,
            "source_security_group_id": "sg-fb256b846597fe443",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_lb",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-2495714028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-9243cb0d2786b9924",
            "security_group_rule_id": "sgr-c85fe89859fa02ec2",
            "self": false,
            "source_security_group_id": "sg-2cbe7e8f2cdac947a",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend",
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-4036972171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-9243cb0d2786b9924",
            "security_group_rule_id": "sgr-fcd1b3929f02defd0",
            "self": false,
            "source_security_group_id": "sg-2cbe7e8f2cdac947a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend",
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_lb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5000,
            "id": "sgrule-3601721633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-2cbe7e8f2cdac947a",
            "security_group_rule_id": "sgr-c441d185267bbbbd0",
            "self": false,
            "source_security_group_id": "sg-2cbe7e8f2cdac947a",
            "timeouts": null,
            "to_port": 5000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_lb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-258190126",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-2cbe7e8f2cdac947a",
            "security_group_rule_id": "sgr-68cc339dbaf1b1046",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_lb_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3961528029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-2cbe7e8f2cdac947a",
            "security_group_rule_id": "sgr-6f33576cd47174bea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2368693844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-9243cb0d2786b9924",
            "security_group_rule_id": "sgr-d07d113e6230dcaea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-bf984cb6a065df734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-bf984cb6a065df734",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-7a3ae93819c372f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-7a3ae93819c372f3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-private-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-c463a4238ee87b886",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-c463a4238ee87b886",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-6edb7cd3ada4849ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-6edb7cd3ada4849ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-public-subnet",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "vpc_id": "vpc-f8d433cb7141f39e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-f8d433cb7141f39e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-cd37b3d88624a829b",
            "default_route_table_id": "rtb-aba53a56e4671fe15",
            "default_security_group_id": "sg-a31226dbde29d2e48",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-f8d433cb7141f39e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-aba53a56e4671fe15",
            "owner_id": "000000000000",
            "tags": {
              "Name": "fleet-portal-dev-network",
              "application": "fleet-portal",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "fleet-portal-dev-network",
              "application": "fleet-portal",
              "environment": "dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}